<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLinear"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
        >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="245dip"
        android:layout_height="52dip" 
        android:layout_gravity="center"
        android:background="@drawable/logo_03"
        android:layout_marginTop="40dip"
        />

    <LinearLayout 
            android:orientation="vertical" 
            android:background="@drawable/login_input" 
        	android:layout_width="fill_parent" 
        	android:layout_height="100dip" 
        	android:layout_marginLeft="20dip" 
        	android:layout_marginTop="40dip" 
        	android:layout_marginRight="20dip">
	<EditText   
		android:id="@+id/uin"
		android:hint="@string/loginName"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:inputType="text"
		android:maxLength = "20"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:background="@null"
		android:layout_marginLeft="10dip"
		android:imeOptions="actionDone"
		android:textColorHint="@color/hintColor"
		/>
	<EditText 
		android:id="@+id/pass"
		android:hint="@string/loginPswd"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:inputType="textPassword"
		android:maxLength = "20"
		android:textSize="20sp"
		android:background="@null"
		android:layout_marginLeft="10dip"
		android:imeOptions="actionDone"
		android:textColorHint="@color/hintColor"
	/> 
	</LinearLayout>   
    <Button 
	    android:id="@+id/btnLogin"
	    android:layout_width="fill_parent"
	    android:layout_height="50dip"
	    android:text="@string/loginWord"
	    android:gravity="center"
	    android:layout_marginTop="20dip"
	    android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip"
		android:textSize="20sp"
		android:background="@drawable/btn_login"
		android:textColor="@color/white"
	    />
    
</LinearLayout>
<RelativeLayout 
        android:layout_width="fill_parent"
	    android:layout_height="50dip"
	    android:layout_marginLeft="20dip"
		android:layout_marginRight="20dip"
		android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/reg"
            android:text="@string/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:clickable="true"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/findPswd"
            android:text="@string/findPswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  
            android:layout_alignParentRight="true" 
            android:textSize="18sp"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</RelativeLayout>